--- a/meetings/2016-11-29.md
+++ b/meetings/2016-11-29.md
@@ -69,7 +69,7 @@ list any weekends they couldn't do. That way it was possible to pick a
 weekend that maximised the likelihood of all core members attending.
 
 If we give the date soon enough, then for most people it's early enough
-that they can commit to it. Therefore following tentative date was
+that they can commit to it. The following tentative date was
 selected: **Thursday May 4 to Sunday May 7 2017**.
 
 Philippe volunteered to write the minutes.
