Use everyone's full name

--- a/meetings/2016-12-06.md
+++ b/meetings/2016-12-06.md
@@ -46,7 +46,7 @@ for critical systems / modules / tools:
 
 * Andreas König (ANDK)
 * Merijn Brand (HMBRAND)
-* Rik Signes (RJBS)
+* Ricardo Signes (RJBS)
 * Leon Timmermans (LEONT)
 * Chad Granum (EXODIST)
 * Paul Johnson (PJCJ)
