Fix typo in Markdown syntax

--- a/meetings/2016-12-20.md
+++ b/meetings/2016-12-20.md
@@ -58,7 +58,7 @@ We got written (by email) and oral confirmation that organising our own
 lunches in the meeting space was possible. They were informed we would
 probably have our own coffee machines.
 
-![One of the meeting rooms][2016-12-20.meeting-room.jpg "One of the meeting rooms"]
+![One of the meeting rooms](2016-12-20.meeting-room.jpg "One of the meeting rooms")
 
 Parking space is available if needed (there is code for opening the
 doors when going in and out, which is changed weekly).
