--- a/meetings/2016-12-20.md
+++ b/meetings/2016-12-20.md
@@ -60,7 +60,7 @@ probably have our own coffee machines.
 
 ![One of the meeting rooms](2016-12-20.meeting-room.jpg "One of the meeting rooms")
 
-Parking space is available if needed (there is code for opening the
+Parking space is available if needed (there is a code for opening the
 doors when going in and out, which is changed weekly).
 
 The room rate has been confirmed to be 70 EUR/night (59 EUR/night + 9.90
